--- a/4-NFT/package.json
+++ b/4-NFT/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "dependencies": {
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
+    "@openzeppelin/contracts": "^5.0.0",
     "hardhat": "^2.19.1"
   }
 }
