--- a/4-NFT/package.json
+++ b/4-NFT/package.json
@@ -19,6 +19,7 @@
     "@types/mocha": ">=9.1.0",
     "chai": "^4.2.0",
     "dotenv": "^16.3.1",
+    "ethers": "^6.8.1",
     "hardhat": "^2.19.1",
     "hardhat-gas-reporter": "^1.0.8",
     "solidity-coverage": "^0.8.1",
